# Ohjelmistotekniikka

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/poetry-test/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md
src/: button.py  dice.py  game.py  global_vars.py  globals.py  level.py  lists.py
src/objects/: button.py  dice.py  level.py  upgrade.py
src/static_items/: asset_manager.py  funcs.py  global_vars.py  lists.py  upgrade_manager.py
src/tests/: game_test.py
