[project]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Iivar",email = "iivari.vanuden@ad.helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cowsay (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
